--- a/EgitimPlatformuAI/Views/LevelScreen/LevelScreen.storyboard
+++ b/EgitimPlatformuAI/Views/LevelScreen/LevelScreen.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,16 +16,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="v960-ning-29" translatesAutoresizingMaskIntoConstraints="NO" id="fbj-Wf-0Yp">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your level on reading?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cq1-A7-DEn">
                                 <rect key="frame" x="42" y="79" width="309.33333333333331" height="27"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="paleGray"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Jao-SJ-5lF">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Jao-SJ-5lF">
                                 <rect key="frame" x="20" y="126" width="353" height="572"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -42,7 +38,7 @@
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mvo-Gr-tAC">
                                 <rect key="frame" x="50" y="718" width="293" height="50"/>
-                                <color key="backgroundColor" name="darkBlue"/>
+                                <color key="backgroundColor" name="paleGray"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="ba0-jJ-UJZ"/>
                                 </constraints>
@@ -51,7 +47,7 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Continue">
                                     <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                     <color key="baseForegroundColor" name="porcelain"/>
-                                    <color key="baseBackgroundColor" name="darkBlue"/>
+                                    <color key="baseBackgroundColor" name="summer"/>
                                 </buttonConfiguration>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -65,21 +61,17 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="charcoal"/>
                         <constraints>
-                            <constraint firstItem="fbj-Wf-0Yp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="AfX-Il-MEQ"/>
                             <constraint firstItem="cq1-A7-DEn" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Cxw-qj-jLb"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Jao-SJ-5lF" secondAttribute="trailing" constant="20" id="Pa7-AY-2Fi"/>
                             <constraint firstItem="Mvo-Gr-tAC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="QSm-GJ-Alm"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Mvo-Gr-tAC" secondAttribute="trailing" constant="50" id="QVo-wX-Onn"/>
-                            <constraint firstItem="fbj-Wf-0Yp" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Qzi-Za-Un2"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Mvo-Gr-tAC" secondAttribute="bottom" constant="50" id="TcW-he-Brj"/>
                             <constraint firstItem="Jao-SJ-5lF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Uq9-Oi-ZUu"/>
                             <constraint firstItem="cq1-A7-DEn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="WeT-jE-S0l"/>
                             <constraint firstItem="Mvo-Gr-tAC" firstAttribute="top" secondItem="Jao-SJ-5lF" secondAttribute="bottom" constant="20" id="nhe-xc-awN"/>
-                            <constraint firstAttribute="bottom" secondItem="fbj-Wf-0Yp" secondAttribute="bottom" id="uQ9-xP-j13"/>
                             <constraint firstItem="Jao-SJ-5lF" firstAttribute="top" secondItem="cq1-A7-DEn" secondAttribute="bottom" constant="20" id="vSG-ds-PQw"/>
-                            <constraint firstItem="fbj-Wf-0Yp" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="xnP-iq-Rrn"/>
                         </constraints>
                     </view>
                     <connections>
@@ -94,15 +86,20 @@
         </scene>
     </scenes>
     <resources>
-        <image name="v960-ning-29" width="5000" height="3333"/>
+        <namedColor name="charcoal">
+            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="darkBlue">
             <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="paleGray">
+            <color red="0.88235294117647056" green="0.89411764705882357" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="summer">
+            <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
